public class Guest
{
    String name;
    int phoneNumber;
    int age;
    boolean gender;

    public Guest(String name, int phoneNumber, int age, boolean gender)
    {
        this.name = name;
        this.phoneNumber = phoneNumber;
        this.age = age;
        this.gender = gender;
    }
}
