package RoomImpl;

public class StandardDoubleRoom extends Room
{
    public StandardDoubleRoom(int ID, String roomType, String floor, int floorNumber, int price)
    {
        super(ID, roomType, floor, floorNumber, price);
    }
}