package RoomImpl;

public class StandardSingleRoom extends Room
{
    public StandardSingleRoom(int ID, String roomType, String floor, int floorNumber, int price)
    {
        super(ID, roomType, floor, floorNumber, price);
    }
}
