public class TextUI //extends Room
{
    private String name;
    private int RoomID;


    /*public TextUI(String roomType, int floor, int floorNumber, boolean available, int price) {
        super(roomType, floor, floorNumber, available, price);
    }*/


    public String getName()
    {
        return name;
    }
    public int getRoomID()
    {
        return RoomID;
    }
    public void getRoomType()
    {
    }
    public void getBookedRooms()
    {

    }
    public void getAvailableRooms()
    {

    }
    public void checkIn()
    {

    }
    public void CheckOut()
    {

    }
}
